# funclift

./: .gitignore  pyproject.toml
docs/: conf.py  index.rst
