[tool.poetry]
name = "funclift"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = {git = "https://github.com/python/mypy.git"}
pytest = "^7.3.1"
hypothesis = "^6.72.2"
sphinx = "^6.2.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
